--- a/SarkariExamDetail/pom.xml
+++ b/SarkariExamDetail/pom.xml
@@ -5,7 +5,7 @@
   <version>0.0.2-SNAPSHOT</version>
  <properties>
 		<jdk.version>1.8</jdk.version>
-		<spring.version>3.2.13.RELEASE</spring.version>
+		<spring.version>4.1.3.RELEASE</spring.version>
 		<jstl.version>1.2</jstl.version>
 	</properties>
 
@@ -52,6 +52,16 @@
     <artifactId>mysql-connector-java</artifactId>
     <version>5.1.26</version>
 </dependency>
+<dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-web</artifactId>
+    <version>4.1.3.RELEASE</version>
+  </dependency>
+  <dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-config</artifactId>
+    <version>4.1.3.RELEASE</version>
+  </dependency>
 	</dependencies>
 
 	<build>
